--- a/config.yaml
+++ b/config.yaml
@@ -8,10 +8,17 @@ Arrs:
   URL: http://127.0.0.1:7878
   APIKey: xxxxxxxxx
   Type: Radarr
+- Name: ""
+  URL: http://127.0.0.1:8686
+  APIKey: xxxxxxxxx
+  Type: Lidarr
 BlackholeDirectory: ""
+PollBlackholeDirectory: false
+PollBlackholeIntervalMinutes: 10
 DownloadsDirectory: ""
 bindIP: 0.0.0.0
 bindPort: "8182"
 WebRoot: ""
 SimultaneousDownloads: 5
 DownloadSpeedLimit: 100
+ArrHistoryUpdateIntervalSeconds: 20
