--- a/docker/Dockerfile.arm64
+++ b/docker/Dockerfile.arm64
@@ -1,5 +1,5 @@
 # syntax=edrevo/dockerfile-plus
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.21
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64-3.21
 
 INCLUDE+ docker/Dockerfile.common
