+ Add Option to Enable / Disable TLS Check During Download + Add better argument parsing

--- a/config.yaml
+++ b/config.yaml
@@ -21,4 +21,5 @@ bindPort: "8182"
 WebRoot: ""
 SimultaneousDownloads: 5
 DownloadSpeedLimit: 100
+EnableTlsCheck: false
 ArrHistoryUpdateIntervalSeconds: 20
