--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,7 @@ BlackholeDirectory: ""
 PollBlackholeDirectory: false
 PollBlackholeIntervalMinutes: 10
 DownloadsDirectory: ""
+TransferDirectory: ""
 bindIP: 0.0.0.0
 bindPort: "8182"
 WebRoot: ""
